--- a/app/src/main/res/layout/activity_careplan3.xml
+++ b/app/src/main/res/layout/activity_careplan3.xml
@@ -20,7 +20,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/signoutButton2"
+        android:id="@+id/careplan1NextButton"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
