--- a/app/src/main/res/layout/activity_careplan3.xml
+++ b/app/src/main/res/layout/activity_careplan3.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/signoutButton3"
+        android:id="@+id/careplan2PreviousButton"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
@@ -20,7 +20,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/careplan1NextButton"
+        android:id="@+id/careplan2NextButton"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
