--- a/app/src/main/res/layout/activity_new_patient.xml
+++ b/app/src/main/res/layout/activity_new_patient.xml
@@ -10,7 +10,9 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Patient"
-        tools:layout_editor_absoluteX="149dp"
-        tools:layout_editor_absoluteY="196dp" />
+        android:layout_marginTop="196dp"
+        android:layout_marginEnd="102dp"
+        android:text="New Patient page here"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
