--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,15 @@
     <color name="light_blue_A400">#FF00B0FF</color>
     <color name="black_overlay">#66000000</color>
     <color name="bordercolor">#000000</color>
+    <color name="text_heading_color">#3D3D3D</color>
+    <color name="text_input_color">#666262</color>
+    <color name="box_border">#E0DDDD</color>
+
+    <color name="colorPrimary">@color/design_default_color_primary</color>
+    <color name="colorPrimaryDark">@color/design_default_color_primary_dark</color>
+    <color name="colorAccent">@color/light_blue_A200</color>
+    <color name="colorPrimaryText">#212121</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorGreen">#32CD32</color>
+
 </resources>
