--- a/app/src/main/res/layout/fragment_daily_report.xml
+++ b/app/src/main/res/layout/fragment_daily_report.xml
@@ -6,9 +6,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/dailyReportScrollView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/rounded_bg"
+    android:layout_height="wrap_content"
     android:fillViewport="true"
+    android:background="@drawable/rounded_bg"
     tools:context=".DailyReportFragment">
 
     <LinearLayout
@@ -34,7 +34,7 @@
 
         <EditText
             android:id="@+id/emailTextarea"
-            android:layout_width="359dp"
+            android:layout_width="350dp"
             android:layout_height="44dp"
             android:layout_marginLeft="20sp"
             android:layout_marginTop="5sp"
@@ -55,7 +55,7 @@
 
         <EditText
             android:id="@+id/progressNotesTextarea"
-            android:layout_width="357dp"
+            android:layout_width="350dp"
             android:layout_height="163dp"
             android:layout_marginLeft="20sp"
             android:layout_marginTop="5sp"
@@ -82,92 +82,32 @@
             android:text="0/500"
             android:textAlignment="viewEnd" />
 
-        <Button
-            android:id="@+id/button6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Button" />
+
+
+
+        <LinearLayout
+            android:id="@+id/patientStatusLayout"
+            android:layout_width="350dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20sp"
+            android:orientation="vertical">
+        </LinearLayout>
+
 
         <Button
-            android:id="@+id/button17"
+            android:id="@+id/submitButton"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Button" />
+            android:layout_height="60dp"
+            android:layout_marginLeft="60dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="60dp"
+            android:backgroundTint="@color/light_blue_900"
+            android:textColor="@color/white"
+            android:text="Submit" />
 
-        <Button
-            android:id="@+id/button21"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Button" />
-
-        <Button
-            android:id="@+id/button7"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Button" />
-
-        <Button
-            android:id="@+id/button20"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Button" />
-
-        <Button
-            android:id="@+id/button18"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Button" />
-
-        <Button
-            android:id="@+id/button19"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Button" />
-
-        <Button
-            android:id="@+id/button8"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Button" />
-
-        <Button
-            android:id="@+id/button9"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Button" />
-
-        <Button
-            android:id="@+id/button16"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Button" />
-
-        <Button
-            android:id="@+id/button15"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Button" />
-
-        <Button
-            android:id="@+id/button10"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Button" />
 
         <Button
             android:id="@+id/button11"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Button" />
-
-        <Button
-            android:id="@+id/button12"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Button" />
-
-        <Button
-            android:id="@+id/button13"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Button" />
@@ -178,5 +118,10 @@
             android:layout_height="wrap_content"
             android:text="Button" />
 
+        <Button
+            android:id="@+id/button10"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Button" />
     </LinearLayout>
 </ScrollView>
