--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,5 +17,6 @@
     <color name="_bg__new_homepage___ek2_color">#FFFFFF</color>
     <color name="ellipse_9_color">#C4C4C4</color>
     <color name="gray">#F3F3F3</color>
+    <color name="default_text">#808080</color>
 
 </resources>
