--- a/app/src/main/res/layout/fragment_daily_report.xml
+++ b/app/src/main/res/layout/fragment_daily_report.xml
@@ -24,26 +24,6 @@
             android:src="@drawable/arrow_down" />
 
         <TextView
-            android:id="@+id/textView19"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20sp"
-            android:text="ID"
-            android:textColor="@color/black"
-            android:textStyle="bold" />
-
-        <EditText
-            android:id="@+id/emailTextarea"
-            android:layout_width="350dp"
-            android:layout_height="44dp"
-            android:layout_marginLeft="20sp"
-            android:layout_marginTop="5sp"
-            android:background="@drawable/rectangle"
-            android:inputType="text|textMultiLine"
-            android:maxLength="500"
-            android:textSize="14sp" />
-
-        <TextView
             android:id="@+id/textView17"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -65,6 +45,14 @@
             android:textSize="14sp" />
 
         <TextView
+            android:id="@+id/progressTextCount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="30sp"
+            android:text="0/500"
+            android:textAlignment="viewEnd" />
+
+        <TextView
             android:id="@+id/textView18"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -73,16 +61,6 @@
             android:text="Current Status"
             android:textColor="@color/black"
             android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/progressTextCount"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="30sp"
-            android:text="0/500"
-            android:textAlignment="viewEnd" />
-
-
 
 
         <LinearLayout
@@ -102,8 +80,8 @@
             android:layout_marginTop="20dp"
             android:layout_marginRight="60dp"
             android:backgroundTint="@color/light_blue_900"
-            android:textColor="@color/white"
-            android:text="Submit" />
+            android:text="Submit"
+            android:textColor="@color/white" />
 
 
         <Button
